<resources>
    <string name="app_name">Modulo 6 Practica 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image">Image</string>
    <string name="pokedex_number">Pokedex number: %d</string>
    <string name="hp">HP</string>
    <string name="attack">Attack</string>
    <string name="defense">Defense</string>
    <string name="sp_atk">Special Attack</string>
    <string name="speed">Speed</string>
    <string name="sp_def">Special Defense</string>
    <string name="base_stats">Base Stats</string>
    <string name="type">Type</string>
    <string name="weak_to">Weak To</string>
    <string name="skills">Skills</string>
    <string name="error">Error!</string>
    <string name="try_again_later">An error has occurred, please try again later.</string>
    <string name="no_data">No data!</string>
    <string name="try_again">Try Again</string>
    <string name="copy_right">© Diplo Móviles</string>
    <string name="restore_password">¿Olvidó su contraseña? Restablecer aquí</string>
    <string name="sign_up">Registrarse</string>
    <string name="sign_in">Ingresar</string>
    <string name="password">Contraseña</string>
    <string name="email">Correo electrónico</string>
    <string name="diplo">Diplomado Desarrollo de Aplicaciones para Dispositivos Móviles</string>
    <string name="second_practice">Práctica 2</string>
    <string name="module">Módulo 8</string>
    <string name="top_background">Top Background</string>
    <string name="logout">Cerrar sesión</string>
</resources>